# Machine-Learning-Operations

./: index.html  requirements.txt
pages/faq/: index.html
pages/overview/: index.html
pages/projects/: index.html
pages/timeplan/: index.html
reports/: report.html
s10_extra/: index.html
s10_extra/documentation/: index.html
s10_extra/high_performance_clusters/: index.html
s10_extra/hyperparameters/: index.html
s1_development_environment/: index.html
s1_development_environment/command_line/: index.html
s1_development_environment/deep_learning_software/: index.html
s1_development_environment/editor/: index.html
s1_development_environment/exercise_files/: checkpoint.pth
s1_development_environment/package_manager/: index.html
s2_organisation_and_version_control/: index.html
s2_organisation_and_version_control/cli/: index.html
s2_organisation_and_version_control/code_structure/: index.html
s2_organisation_and_version_control/dvc/: index.html
s2_organisation_and_version_control/git/: index.html
s2_organisation_and_version_control/typer_exercise/: pyproject.toml  requirements.txt
s2_organisation_and_version_control/typer_exercise/src/my_project/: greetings.py  iris_classifier.py  model.ckpt  model.pt  train.py
s3_reproducibility/: index.html
s3_reproducibility/config_files/: index.html
s4_debugging_and_logging/: index.html
s5_continuous_integration/: index.html
s6_the_cloud/: index.html
s7_deployment/: index.html
s8_monitoring/: index.html
s9_scalable_applications/: index.html
search/: search_index.json
(+22 files in other folders)
